<resources>
    <string name="app_name">Bikes</string>
    <string name="city_name_hint">Search a city…</string>
    <string name="station_name">Station name</string>
    <string name="station_address">Station address or description</string>
    <string name="go_to_station">Go to station</string>
    <string name="my_position">Go to your position</string>
    <string name="city_name">City name</string>
    <string name="available_stands"><b>%1$d</b> free stands</string>
    <string name="available_bikes"><b>%1$d</b> bikes available</string>
</resources>
