<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_station"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="12dp"
    android:paddingEnd="24dp"
    android:paddingBottom="12dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/station_address" />

    <TextView
        android:id="@+id/available_stands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/available_stands" />

    <TextView
        android:id="@+id/available_bikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_bikes" />

    <Button
        android:id="@+id/go_to_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/buttonBackground"
        android:text="@string/go_to_station"
        android:textColor="@color/buttonText" />

</LinearLayout>